# ROSLab1

./: README.md
src/dino_generator/: CMakeLists.txt  package.xml
src/dino_generator/launch/: dino_generator.launch
src/dino_generator/src/: main.cpp
src/dino_srv/: CMakeLists.txt  package.xml
src/dinogenerator/: CMakeLists.txt  package.xml  runDinoGenerator.launch
src/dinogenerator/launch/: runDinoGenerator.launch
src/dinogenerator/src/: main.cpp
src/dinosrv/: CMakeLists.txt  package.xml
src/dinosrv/srv/: dinoName.srv
