<?xml version="1.0"?>
<package format="2">
  <name>dino_generator</name>
  <version>0.0.0</version>
  <description>The dino_generator package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="alenasts00@gmail.com">helen</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>TODO</license>

  <!-- Use doc_depend for packages you need only for building documentation: -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dinosrv</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>dinosrv</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>dinosrv</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
